# ligo

./: .gitlab-ci.yml  Makefile  Makefile.vertalo  ligo-formal description.txt  ligo-type-excercice.txt  ligo-typesystem.txt  ligo_formal_description.tex  ligo_formal_description.txt  txt_to_tex.sh
scripts/: build_ligo_local.sh  install_vendors_deps.sh
src/main/compile/: of_typed.ml
src/main/decompile/: formatter.ml
src/main/main_errors/: formatter.ml  main_errors.ml  types.ml
src/main/scopes/: PP.ml
src/parser/camligo/: ast_generated.ml
src/passes/01-parsing/: cameligo.ml  cameligo.mli  pascaligo.ml  pascaligo.mli  reasonligo.ml  reasonligo.mli
src/passes/01-parsing/shared/: EvalOpt.ml  EvalOpt.mli  Lexer.mli  Lexer.mll  LexerLib.mli  LexerLog.ml  LexerLog.mli  LexerUnit.ml  LexerUnit.mli  ParserAPI.ml  ParserAPI.mli  ParserUnit.ml  ParserUnit.mli  dune
src/passes/01-parsing/shared/Michelson/: .links  LexToken.mli  LexToken.mll  Lexer.mli  Lexer.mll  LexerMain.ml  Pair.ml  ParToken.mly  Parser.mly  ParserMain.ml  RomanParser.mly
src/passes/04-self_ast_imperative/: errors.ml  helpers.ml
src/passes/05-purification/: compiler.ml  decompiler.ml
src/passes/07-desugaring/: compiler.ml  decompiler.ml
src/passes/09-typing/: typer.ml
src/passes/10-self_ast_typed/: helpers.ml  michelson_layout.ml
src/passes/11-interpreter/: dune  errors.ml  interpreter.ml  interpreter.mli  misc.ml  monad.ml
src/passes/11-spilling/: compiler.ml
src/passes/12-self_mini_c/: self_mini_c.ml  subst.ml
src/passes/14-stacking/: compiler_program.ml  compiler_program.mli  errors.ml
src/passes/predefined/: predefined.ml
src/stages/2-ast_imperative/: PP.ml  combinators.ml  combinators.mli  types.ml
src/stages/3-ast_sugar/: PP.ml  combinators.ml  combinators.mli  dune  types.ml
src/stages/4-ast_core/: PP.ml  ast.ml  ast_core.ml  combinators.ml  combinators.mli  dune  types_utils.ml
src/stages/5-ast_typed/: PP.ml  ast.ml  ast_typed.ml  combinators.ml  combinators.mli  compare.ml  compare_enum.ml  compare_generic.ml  dune  environment.ml  environment.mli  types_utils.ml
src/stages/6-mini_c/: PP.ml  types.ml
src/test/: basic_multisig_tests.ml  integration_tests.ml  multisig_tests.ml  typer_tests.ml
vendors/Preprocessor/: Preproc.mli  Preproc.mll  dune
(+64 files in other folders)
