(library
  (name ast_core)
  (public_name ligo.ast_core)
  (libraries
    simple-utils
    tezos-utils
    stage_common
    ast_sugar
    adt_generator
    ppx_deriving_yojson.runtime
  )
  (preprocess
    (pps ppx_let ppx_deriving_yojson bisect_ppx --conditional)
  )
  (flags (:standard -open Simple_utils ))
)
