(library
  (name ast_typed)
  (public_name ligo.ast_typed)
  (libraries
    simple-utils
    tezos-utils
    ast_core ; Is that a good idea?
    stage_common
    adt_generator
    UnionFind
    ppx_deriving_yojson.runtime
  )
  (preprocess
    (pps ppx_let ppx_deriving_yojson bisect_ppx --conditional)
  )
;;  (modules_without_implementation generated_fold_x)
  (flags (:standard -open Simple_utils))
)
