;; Stuff common to lexers and parsers of LIGO

;; Build of the lexer as a library

(ocamllex Lexer)

(library
  (name lexer_shared)
  (public_name ligo.lexer.shared)
  (libraries
    ;; Vendors
    simple-utils
    Preprocessor
    ;; Third party
    uutf
    getopt
    zarith)
  (modules
    LexerUnit
    Lexer
    LexerLog
    EvalOpt
    Version)
  (preprocess
    (pps bisect_ppx --conditional)))

;; Build of the parser as a library

(library
  (name parser_shared)
  (public_name ligo.parser.shared)
  (libraries
    ;; LIGO
    lexer_shared
    ;; Vendors
    simple-utils
    ;; Third party
    menhirLib)
  (modules
    ParserUnit
    ParserAPI)
  (preprocess
    (pps bisect_ppx --conditional)))

;; Build of the version source (for the user, as a CLI option)

(rule
  (targets Version.ml)
  (action
    (progn (run "sh" "-c" "printf 'let version = \"%s\"'\\\\n \"$(echo UNKNOWN)\" > Version.ml")))
  (mode (promote (until-clean) (only *))))
